--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h4 id="message"></h4>
         </div>
         <div class="photo-box" onclick="createHeart()">
-            <img src="image/WhatsApp_Image_2024-08-08_at_11.34.22_2-removebg-preview.png" alt="Photo">
+            <img src="#" alt="Photo">
         </div>
         <div id="confetti-container"></div> <!-- Confetti container added here -->
     </div>
