--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <audio id="notification-sound" src="Audio/pop_up.mp3" preload="auto"></audio>
-    <audio id="hover-sound" src="Audio/Dekha Tenu Pehli Pehli Baar Ve_320 (mp3cut.net).mp3" preload="auto"></audio>
+    <audio id="hover-sound" src="Audio/funny-laughing-sound-180125.mp3" preload="auto"></audio>
     <!-- Hover audio added here -->
 
 <script src="index.js"></script>
