--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 <body>
     <div class="email-icon" onclick="showLoginCard()"> <!-- Email Icon -->
         <div class="suggestion-box" id="suggestionBox">
-            It may be your feveroit person's name,
-            <br>
-            <br>
-            or may be your best friend,
-            <br>
-            may be something different.
+            sorry girl😁,
+            its your nic name
         </div>
 
         <div class="login-card" id="login-card">
-            <input type="password" id="password" placeholder="Enter your choice" onclick="showSuggestionBox()">
+            <input type="password" id="password" placeholder="Your Name" onclick="showSuggestionBox()">
             <div class="show-password">
                 <img id="eye-icon" src="image/openeye-removebg-preview.png" alt="Toggle password visibility">
             </div>
@@ -32,7 +28,7 @@
 
     <div class="container">
         <div>
-            <h1 id="proposal-text">Do you love me?</h1>
+            <h1 id="proposal-text">are you mogli?</h1>
             <div class="buttons">
                 <button id="yes">Yes</button>
                 <button id="no">No</button>
