--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="email-icon" onclick="showLoginCard()"> <!-- Email Icon -->
         <div class="suggestion-box" id="suggestionBox">
-            sorry girl😁,
-            its your nic name
+            it can be your febroit person,
+            or yor pet name
         </div>
 
         <div class="login-card" id="login-card">
@@ -28,7 +28,7 @@
 
     <div class="container">
         <div>
-            <h1 id="proposal-text">are you mogli?</h1>
+            <h1 id="proposal-text">Do You Love me?</h1>
             <div class="buttons">
                 <button id="yes">Yes</button>
                 <button id="no">No</button>
@@ -42,7 +42,7 @@
     </div>
 
     <audio id="notification-sound" src="Audio/pop_up.mp3" preload="auto"></audio>
-    <audio id="hover-sound" src="Audio/funny-laughing-sound-180125.mp3" preload="auto"></audio>
+    <audio id="hover-sound" src="#" preload="auto"></audio>
     <!-- Hover audio added here -->
 
 <script src="index.js"></script>
